tests/fixtures/invalid/set_neg.py
# Cannot use unary - on set
x: set[int] = -{1, 2, 3}
